# Axolote

./: .gitignore  README.md  mapping.py  musica_tetris.lua  planejamento.plan  pyproject.toml  requirement.txt  testereconhecimentodecornaimagem.py
configs/: mission_2026.json
imav_old_codes/: mapping.py  trigger_period.py
scripts/: identify.py  identify2.py  mapping.py  musica_tetris.lua  requirement.txt  trigger_period.py
scripts/ardupilot/: skylimp_music.lua
src/skylimpiadas/: __init__.py  __main__.py  cli.py  config.py  scoring.py
src/skylimpiadas/hardware/: __init__.py  mavlink.py
src/skylimpiadas/mapping/: __init__.py  capture.py
src/skylimpiadas/vision/: __init__.py  detector.py
tests/: test_scoring.py
