[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skylimpiadas"
version = "0.1.0"
description = "Esqueleto de software para a Skylimpiadas 2026."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vision = ["opencv-python>=4.8", "numpy>=1.24"]
drone = ["dronekit>=2.9", "pymavlink>=2.4"]
dev = ["pytest>=8"]

[project.scripts]
skylimpiadas = "skylimpiadas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
